Minor change to fix broken layout
Mobile overflow wasn't quite right

--- a/source/ecss/components/header.less
+++ b/source/ecss/components/header.less
@@ -98,9 +98,10 @@
   height: 52px;
   position: relative;
   display: inline-block;
-  width: 365px;
+  width: 230px;
 
   @media screen and (min-width: 800px) {
+    width: 365px;
     height: 112px;
   }
 }
@@ -170,6 +171,7 @@
 .gl-Nav {
   padding: var(--spacing) 0;
   border-bottom: var(--spacing-px) solid var(--color-l);
+  overflow: scroll; // Mobile `li` overflows
 
   @media print {
     display: none;
